<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ToolRelativeLayout</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="inentory">Inentory</string>
    <string name="weight">Weight</string>
    <string name="photo">Photo</string>
</resources>

