<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">


    <ImageView
        android:id="@+id/ImageView1"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="442dp"
        android:background="@color/colorGray"
        tools:ignore="InvalidId" />

    <TextView
        android:layout_width="197dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="526dp"
        android:gravity="center"
        android:text="@string/photo"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ImageView2"
        android:layout_width="77dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="442dp"
        android:background="@drawable/ic_outline_photo_camera_24"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/button"
        android:layout_width="413dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="360dp"
        android:textAllCaps="false"
        android:textSize="26dp"
        android:gravity="bottom"
        android:text="@string/title"
        android:padding="10dp"
        android:textColor="@color/colorGray"
        android:background="@color/colorWhite"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="161dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="260dp"
        android:background="@color/colorWhite"
        android:textAllCaps="false"
        android:textSize="26dp"
        android:gravity="bottom"
        android:text="@string/price"
        android:padding="10dp"
        android:textColor="@color/colorGray" />

    <Button
        android:id="@+id/button6"
        android:layout_width="241dp"
        android:layout_height="95dp"
        android:background="@color/colorWhite"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="165dp"
        android:layout_marginEnd="0dp"
        android:drawableRight="@drawable/ic_baseline_location_on_24"
        android:layout_marginBottom="260dp"
        android:textAllCaps="false"
        android:textSize="26dp"
        android:gravity="bottom"
        android:text="@string/location"
        android:padding="10dp"
        android:textColor="@color/colorGray" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="160dp"
        android:background="@color/colorWhite"
        android:textAllCaps="false"
        android:textSize="26dp"
        android:gravity="bottom"
        android:text="@string/description"
        android:padding="10dp"
        android:textColor="@color/colorGray" />

    <Button
        android:id="@+id/button3"
        android:layout_width="161dp"
        android:layout_height="95dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="1dp"
        android:background="@color/colorWhite"
        android:layout_marginBottom="60dp"
        android:textAllCaps="false"
        android:textSize="26dp"
        android:gravity="bottom"
        android:text="@string/inentory"
        android:padding="10dp"
        android:textColor="@color/colorGray" />

    <Button
        android:id="@+id/button5"
        android:layout_width="241dp"
        android:layout_height="95dp"
        android:background="@color/colorWhite"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="165dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="60dp"
        android:textAllCaps="false"
        android:textSize="26dp"
        android:gravity="bottom"
        android:text="@string/weight"
        android:padding="10dp"
        android:textColor="@color/colorGray" />

</RelativeLayout>